    but hashes this number when it hashes whatever client data maps to the key, so in effect, clients cannot predict
    which connection requests correlate to which keys, negating attacks on hash table worst behavior with connection
    request packets.

    This is an important point to consider!

    -----------

    Added a bunch of extra logic for packet creates


Friday May 13th, 2016
=====================

    Implement LAN version (unsecured) of client/server in code

    Move on to implement locked down secured version before it leaves my head!

    Implemented basic logic for server challenge.

    Don't want to go with a complicated hash delete. Annoying. Hard to test. Stupid waste of time. Easy to fuck up!

    How to make it robust on collisions?

    Idea: client rolls a new salt if it gets no response within 1 second?

    This will give it another slot, so if somebody else is using that slot, client is unblocked.

    This is a really smart approach, and easy to test. Keep it simple!

    Done! Sold. Easy.

    Now I really need to get a network interface going, some way to send and receive packets.

    In my previous implementation the actual serialization of the messages was performed later,
    eg. they were added to a queue.

    How about implementing a network interface implementation inside the example program first,
    and then seeing how it can be generalized into the library? (this is a good general pattern...)

    How about just getting the basic BSD sockets implementation into the network2.h?

    Halfway through this.

    Need to bring across the actual internel send and receive functions for the socket class.

    Then once this is done, can bring across an actual send queue or something like that.

    Key design goal here is to keep the protocol2 aspect of packets separate from the over the wire sending.

    This probably means that packets and send queues *and* serialization need to belong in protocol2
