@@ -1,15 +1,21 @@
 DONE
 
-    Almost finished with converting network interface across.
-
-    It's going well. I like the new library idea, and it adds a lot of value for clients vs. a bunch of sample code.
-
-    Need to track down some memory leaks. I'm really not sure why I'm getting them...
-
-    Fixed. Just needed to keep local.
-
 TODO
 
-    Now need to finishing bringing across network interface and then flesh out the actual client/server.
+    Implement rate limiting for various packets sent
 
-    // ...
+    Implement server-side timeout of a client
+
+    Implement client-side timeout of server connection
+
+    Implement disconnect packets, and client-side and server-side 'nice' disconnect list.
+
+    Implement the thing where the client re-rolls the client salt if no response within one second.
+
+    Implement connection request timeout (10 seconds, while connection timeout may be shorter...)
+
+    Implement server open/close.
+
+    Pass over remaining todos and actually implement them.
+
+    Implement counters for socket interface.
